chore: other accets

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,6 +3,6 @@ body {
 
     .test {
         font-size: 99px;
-        background-image: url('../../static/imgs/woman.jpeg'); /* file-loader 可以直接处理css文件中的图片引用 */
+        background-image: url('../../static/imgs/woman.jpeg'); /* url-loader 可以直接处理css文件中的图片引用 */
     }
 }
